// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main.lua - lua-verify: main.lua 1`] = `
if condition then
  print("condition")
end

if condition1 then
  print("condition1")
elseif condition2 then
  print("condition2")
end

if condition_outer then
  print("condition_outer")
else if condition2 then
    print("condition_inner")
end
end
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
if condition then
	print("condition")
end

if condition1 then
	print("condition1")
elseif condition2 then
	print("condition2")
end

if condition_outer then
	print("condition_outer")
else
	if condition2 then
		print("condition_inner")
	end
end

`;

exports[`main.lua - lua-verify: main.lua 2`] = `
if condition then
  print("condition")
end

if condition1 then
  print("condition1")
elseif condition2 then
  print("condition2")
end

if condition_outer then
  print("condition_outer")
else if condition2 then
    print("condition_inner")
end
end
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
if condition then
	print('condition')
end

if condition1 then
	print('condition1')
elseif condition2 then
	print('condition2')
end

if condition_outer then
	print('condition_outer')
else
	if condition2 then
		print('condition_inner')
	end
end

`;
